--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ pydantic==2.5.2
 pydantic_core==2.14.5
 typing_extensions==4.9.0
 yarl==1.9.4
-natasha==1.6.0
+redis~=5.0.4
+numpy~=1.26.4
+natasha~=1.6.0
